; ModuleID = '/home/carl/AnghaBench/freebsd/sys/compat/linuxkpi/common/src/extr_linux_hrtimer.c_linux_hrtimer_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/compat/linuxkpi/common/src/extr_linux_hrtimer.c_linux_hrtimer_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hrtimer = type { i32, i32 }

@.str = private unnamed_addr constant [8 x i8] c"hrtimer\00", align 1
@MTX_DEF = common dso_local global i32 0, align 4
@MTX_RECURSE = common dso_local global i32 0, align 4
@MTX_NOWITNESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @linux_hrtimer_init(%struct.hrtimer* %0) #0 {
  %2 = alloca %struct.hrtimer*, align 8
  store %struct.hrtimer* %0, %struct.hrtimer** %2, align 8
  %3 = load %struct.hrtimer*, %struct.hrtimer** %2, align 8
  %4 = call i32 @memset(%struct.hrtimer* %3, i32 0, i32 8)
  %5 = load %struct.hrtimer*, %struct.hrtimer** %2, align 8
  %6 = getelementptr inbounds %struct.hrtimer, %struct.hrtimer* %5, i32 0, i32 0
  %7 = load i32, i32* @MTX_DEF, align 4
  %8 = load i32, i32* @MTX_RECURSE, align 4
  %9 = or i32 %7, %8
  %10 = load i32, i32* @MTX_NOWITNESS, align 4
  %11 = or i32 %9, %10
  %12 = call i32 @mtx_init(i32* %6, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32* null, i32 %11)
  %13 = load %struct.hrtimer*, %struct.hrtimer** %2, align 8
  %14 = getelementptr inbounds %struct.hrtimer, %struct.hrtimer* %13, i32 0, i32 1
  %15 = load %struct.hrtimer*, %struct.hrtimer** %2, align 8
  %16 = getelementptr inbounds %struct.hrtimer, %struct.hrtimer* %15, i32 0, i32 0
  %17 = call i32 @callout_init_mtx(i32* %14, i32* %16, i32 0)
  ret void
}

declare dso_local i32 @memset(%struct.hrtimer*, i32, i32) #1

declare dso_local i32 @mtx_init(i32*, i8*, i32*, i32) #1

declare dso_local i32 @callout_init_mtx(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
